[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.2"


[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
select = ["F", "B", "I", "E","W"]
ignore = ["E731"]

[tool.ruff.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
